objects/UserEngagement__dll.object
<CustomObject>
    <fields>
        <fullName>ClientSession__c</fullName>
        <label>ClientSession</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>CreatedById</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomFields__c</fullName>
        <label>CustomFields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <label>EntityType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventIdentifier__c</fullName>
        <label>EventIdentifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>EventName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_EventIdentifier__c</fullName>
        <label>KQ_EventIdentifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedAt__c</fullName>
        <label>LoggedAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoggerAppName__c</fullName>
        <label>LoggerAppName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggerName__c</fullName>
        <label>LoggerName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageContext__c</fullName>
        <label>PageContext</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageUrl__c</fullName>
        <label>PageUrl</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>